examples/errors/module_name_clobber_error.flx
  fun Ember() {
    return 1;
  }
